crates/tensorzero-derive/tests/ui/struct.stderr
error: TensorZeroDeserialize only supports enums
 --> tests/ui/struct.rs:2:8
  |
2 | struct MyStruct {
  |        ^^^^^^^^
